<resources>
    <string name="app_name">PongrassAdPortal</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_google_sign_in">Sign in with Google</string>
    <string name="action_signout">Sign Out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_google_signin">An error has occur while trying to login to Google.</string>
    <string name="error_facebook_signin">An error has occur while trying to login to Facebook.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="gso_oauth_clientid">488442658294-8bkolfrgmvbar41gk313p7g0i3fdqti7.apps.googleusercontent.com</string>
    <string name="gso_signin_ok">Google sign in OK</string>
    <string name="gso_signin_cancelled">Google sign in Cancelled</string>
    <string name="facebook_app_id">347007338992107</string>
    <string name="facebook_app_secret">9c159d8568ef860afa3c93cf50e082a0</string>
    <string name="facebook_signin_ok">Signed in to Facebook</string>
    <string name="facebook_signin_cancelled">Facebook signin cancelled</string>
    <string name="take_photo">Take a Photo</string>
    <string name="open_camera">Open Camera</string>

    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>

    <string name="pongrass_adportal_broadcast">PongrassAdPortalBroadcast</string>
    <string name="pongrass_service_start">PongrassAdPortalStart</string>
    <string name="pongrass_service_stop">PongrassAdPortalStop</string>
    <string name="start_position_update">Start Update</string>
    <string name="stop_position_update">Stop Update</string>


    <string name="storage_url">gs://pongrassadportal.appspot.com</string>
    <string name="title_activity_orders_scroll">OrdersScrollActivity</string>
    <string name="title_activity_accounts_base">AccountsActivityBase</string>
    <string name="orders">Orders %1d</string>
    <string name="open_order">Open Order</string>
    <string name="preference_file_key">pongrass_saved_preferences</string>
    <string name="random_long_string">WHEREAS the people of New South Wales, Victoria, South
Australia, Queensland, and Tasmania, humbly relying on the
blessing of Almighty God, have agreed to unite in one indissoluble
Federal Commonwealth under the Crown of the United Kingdom
of Great Britain and Ireland, and under the Constitution hereby
established:
And whereas it is expedient to provide for the admission into the
Commonwealth of other Australasian Colonies and possessions of
the Queen:
Be it therefore enacted by the Queen‘s most Excellent Majesty, by
and with the advice and consent of the Lords Spiritual and
Temporal, and Commons, in this present Parliament assembled,
and by the authority of the same, as follows:</string>
    <string name="title_location_list">Locations</string>
    <string name="title_location_detail">Location Detail</string>
    <string name="title_user_list">Users</string>
    <string name="title_user_detail">User Detail</string>
    <string name="title_event_list">Events</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="who">Who</string>
    <string name="where">Where</string>
    <string name="when">When</string>
    <string name="what">What</string>
    <string name="accounts">Accounts</string>
    <string name="settings">Settings</string>
    <string name="title_schedule_list">Schedules</string>
    <string name="title_schedule_detail">Schedule Detail</string>
    <string name="title_activity_account_settings">Account Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="newevent_id">newevent_id</string>;
    <string name="add_new_event">Add New Event</string>
    <string name="add_new_event_details">Create a new event which which other people can subscribe to</string>
    <string name="event_public">Public</string>
    <string name="event_enter_address">Enter Address</string>
    <string name="event_enter_title">Enter title for the event</string>
    <string name="event_enter_detail_description">Enter a detail description for the event</string>
    <string name="event_save">Save Event Details</string>
    <string name="event_delete">Remove Event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
