<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/event_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="1000dp"
    android:orientation="vertical"

    android:padding="16dp"
    tools:context="adportal.pongrass.com.au.pongrassadportal.EventDetailFragment">

    <EditText
        android:id="@+id/editEventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:text="@string/event_enter_title" />

    <CheckBox
        android:id="@+id/checkBoxEventStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_public" />

    <EditText
        android:id="@+id/editEventLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"

        android:text="@string/event_enter_address" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapEventView"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <fragment android:name="adportal.pongrass.com.au.pongrassadportal.DateTimeFragment"
        android:id="@+id/start_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_date_time" />

    <fragment android:name="adportal.pongrass.com.au.pongrassadportal.DateTimeFragment"
        android:id="@+id/stop_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_date_time" />

    <EditText
        android:id="@+id/editEventDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/event_enter_detail_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/eventSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/event_save" />

        <Button
            android:id="@+id/eventDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/event_delete" />
    </LinearLayout>


</LinearLayout>
